--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fsfe",
+  "name": "icucollab",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -7,5 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.18.2",
+    "ws": "^8.13.0"
+  }
 }
